--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "type-check": "vue-tsc --build --force",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "format": "prettier --write src/",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d docs"
   },
   "dependencies": {
     "@primevue/themes": "^4.1.1",
@@ -39,7 +39,6 @@
     "autoprefixer": "^10.4.20",
     "eslint": "^8.57.0",
     "eslint-plugin-vue": "^9.23.0",
-    "gh-pages": "^6.2.0",
     "npm-run-all2": "^6.2.0",
     "postcss": "^8.4.47",
     "prettier": "^3.2.5",
