--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@primevue/themes": "^4.1.1",
     "axios": "^1.7.7",
     "dayjs": "^1.11.13",
+    "gsap": "^3.12.5",
     "mitt": "^3.0.1",
     "pinia": "^2.2.4",
     "primeicons": "^7.0.0",
